--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^5.1.0",
-    "express-http-proxy": "^2.1.1"
+    "express-http-proxy": "^2.1.1",
+    "http-proxy-middleware": "^3.0.5"
   }
 }
